changed background photo and created portion of the main header

--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
 <body>
 
     <header>
-        header
+        <a href="#About">About</a>
+        <a href="#Contact">Contact</a>
+        <a href="#Portfolio">Portfolio</a>
     </header>
 
+    <div class="container">
+
+
+
+    </div>
+
 </body>
+
 </html>
