modified header with name and moved a tags to right

--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
 <body>
 
     <header>
-        <a href="#About">About</a>
-        <a href="#Contact">Contact</a>
-        <a href="#Portfolio">Portfolio</a>
+        <div>
+            <h1>Phillip Swartz</h1>
+
+            <a href="#About">About</a>
+            <a href="#Contact">Contact</a>
+            <a href="#Portfolio">Portfolio</a>
+
+        </div>
     </header>
 
     <div class="container">
