added reset.css file for future use browser compatibility

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Resest CSS file added -->
+    <link rel="stylesheet" type="text/css" href="reset.css">
+
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     
     <title>Basic-Portfolio</title>
