--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
 </head>
 <body>
 
-    <header>
-        <div>
+    <div class="header">
+
+        <div class="header-left">
             <h1>Phillip Swartz</h1>
 
+        </div>
+        
+        <div class="header-right">
             <a href="#About">About</a>
             <a href="#Contact">Contact</a>
             <a href="#Portfolio">Portfolio</a>
-
         </div>
-    </header>
+    </div>
+
 
     <div class="container">
 
