completed header right to match homework assignment view

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
             <h1>Phillip Swartz</h1>
 
         </div>
-        
+
         <div class="header-right">
-            <a href="#About">About</a>
-            <a href="#Contact">Contact</a>
-            <a href="#Portfolio">Portfolio</a>
+            <div class="col-1">
+                <a href="#About">About</a>
+            </div>
+
+            <div class="col-2">
+                <a href="#Contact">Contact</a>
+            </div>
+
+            <div class="col-3">
+                <a href="#Portfolio">Portfolio</a>
+            </div>
         </div>
     </div>
 
