added top header and repositioned margins, also added content section... in progress

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 
+    <section id="full-width">
     <div class="header">
 
         <div class="header-left">
@@ -27,15 +28,25 @@
             </div>
 
             <div class="col-2">
-                <a href="#Contact">Contact</a>
+                <a href="#Contact">Portfolio</a>
             </div>
 
             <div class="col-3">
-                <a href="#Portfolio">Portfolio</a>
+                <a href="#Portfolio">Contact</a>
             </div>
         </div>
     </div>
 
+    </section>
+
+
+    <div class="content">
+        <section class="content-head">
+            <h2>About Me</h2>
+        </section>
+
+
+    </div>
 
 
 </body>
