--- a/index.html
+++ b/index.html
@@ -15,36 +15,88 @@
 <body>
 
     <section id="full-width">
-    <div class="header">
+        <div class="header">
 
-        <div class="header-left">
-            <h1>Phillip Swartz</h1>
+            <div class="header-left">
+                <h1>Phillip Swartz</h1>
 
+            </div>
+
+            <div class="header-right">
+                <div class="col-1">
+                    <a href="index.html">About</a>
+                </div>
+
+                <div class="col-2">
+                    <a href="portfolio.html">Portfolio</a>
+                </div>
+
+                <div class="col-3">
+                    <a href="contact.html">Contact</a>
+                </div>
+            </div>
         </div>
-
-        <div class="header-right">
-            <div class="col-1">
-                <a href="#About">About</a>
-            </div>
-
-            <div class="col-2">
-                <a href="#Contact">Portfolio</a>
-            </div>
-
-            <div class="col-3">
-                <a href="#Portfolio">Contact</a>
-            </div>
-        </div>
-    </div>
 
     </section>
 
 
     <div class="content">
-        <section class="content-head">
-            <h2>About Me</h2>
-        </section>
+        <div class="content-wrapper">
+            <section class="content-head">
+                <h2 id="border-line">About Me</h2>
+            </section>
 
+            <img src="assets/images/ProfilePicture.jpg">
+
+            <p>There are many variations of passages of Lorem 
+                Ipsum available, but the majority have suffered 
+                alteration in some form, by injected humour, or 
+                randomised words which don't look even slightly 
+                believable. If you are going to use a passage of 
+                Lorem Ipsum, you need to be sure there isn't anything 
+                embarrassing hidden in the middle of text. All the Lorem 
+                Ipsum generators on the Internet tend to repeat predefined 
+                chunks as necessary, making this the first true generator 
+                on the Internet. It uses a dictionary of over 200 Latin words, 
+                combined with a handful of model sentence structures, to 
+                generate Lorem Ipsum which looks reasonable. The generated 
+                Lorem Ipsum is therefore always free from repetition, injected
+                humour, or non-characteristic words etc.
+            </p>
+            <p>
+                It is a long established fact that a reader will be distracted 
+                by the readable content of a page when looking at its layout. 
+                The point of using Lorem Ipsum is that it has a more-or-less 
+                normal distribution of letters, as opposed to using 'Content 
+                here, content here', making it look like readable English. Many 
+                desktop publishing packages and web page editors now use Lorem 
+                Ipsum as their default model text, and a search for 'lorem ipsum' 
+                will uncover many web sites still in their infancy. Various versions 
+                have evolved over the years, sometimes by accident, sometimes on 
+                purpose (injected humour and the like).
+            </p>
+            <p>
+                It is a long established fact that a reader will be distracted 
+                by the readable content of a page when looking at its layout. 
+                The point of using Lorem Ipsum is that it has a more-or-less 
+                normal distribution of letters, as opposed to using 'Content 
+                here, content here', making it look like readable English. Many 
+                desktop publishing packages and web page editors now use Lorem 
+                Ipsum as their default model text, and a search for 'lorem ipsum' 
+                will uncover many web sites still in their infancy. Various versions 
+                have evolved over the years, sometimes by accident, sometimes on 
+                purpose (injected humour and the like).
+            </p>
+
+        </div>
+
+    </div>
+
+    <div class="footer">
+        <h4>
+            copyright
+        </h4>
+        
 
     </div>
 
