--- a/portfolio.html
+++ b/portfolio.html
@@ -47,20 +47,24 @@
             </section>
 
             <div>
-                <div class="img_chart">
+                <div>
                     <img alt="chart_img" src="assets/images/chart.jpg">
+                    <div class="img_chart">Chart</div>
                 </div>
 
-                <div class="img_controller">
-                    <img alt="controller_img" src="assets/images/game controller.jpg">                
+                <div>
+                    <img alt="controller_img" src="assets/images/game controller.jpg">
+                    <div class="img_controller">Controller</div>               
                 </div>
 
-                <div class="img_ipad">
-                    <img alt="ipad_img" src="assets/images/ipad.jpg">                
+                <div>
+                    <img alt="ipad_img" src="assets/images/ipad.jpg">
+                    <div class="img_ipad">iPad</div>               
                 </div>
                 
-                <div class="img_search">
+                <div>
                     <img alt="search_img" src="assets/images/search photo.png">
+                    <div class="img_search">Search</div>
                 </div>
                 
             </div>
