adjust textarea tag to include some margin

--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
                 <form>
                     <div>
                         <h3>Name</h3>
-                            <input type="text" placeholder="John Smith">
+                            <input id="mname" type="text" placeholder="John Smith">
 
                     </div>
                     <br>
                     <div>
                         <h3>Email</h3>
-                            <input type="text" placeholder="example@gmail.com">
+                            <input id="memail" type="text" placeholder="example@gmail.com">
                     </div>
                     <br>
 
@@ -94,8 +94,6 @@
         
 
     </div>
-
-
 
 
 </body>
